<resources>
    <string name="app_name">FindR Job</string>
    <string name="motto">Unlock Your Career Potential with FindR Job </string>
    <string name="welcome">Welcome to FindR Job – Your Pathway to Success!</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="forgot_text">No worries, we will help you reset it!</string>
    <string name="enter_your_register_email">Enter Your Register Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="user_login_image">User Login Image</string>
    <string name="user_login">User Login</string>
    <string name="register_now">Register Now</string>
    <string name="user_registered_image">User Registered Image</string>
    <string name="credentials">Enter Your Credentials</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="confirm_password">Enter Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">Log Out</string>
    <string name="goggle">Continue with Google</string>
    <string name="name">FindR Job</string>
    <string name="job_provider">Job Provider</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="default_web_client_id">AIzaSyDIGRBCb24Xf1zZ1i1L8EsTeYARJl05EpE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tagline">By MedTime</string>
    <string name="jobs_title">Available Jobs</string>
    <string name="applications_title">Your Applications</string>
    <string name="profile_title">Profile</string>
    <!--  Job Details  -->
    <string name="apply_now">Apply Now</string>
    <string name="job_status_pending">Status: Pending</string>
    <string name="job_status_accepted">Status: Accepted</string>
    <string name="job_status_rejected">Status: Rejected</string>
    <!--  Profile Section  -->
    <string name="profile_name">Name: </string>
    <string name="applied_count">Jobs Applied: </string>
    <string name="accepted_count">Jobs Accepted: </string>
    <string name="rejected_count">Jobs Rejected: </string>
    <string name="software_developer">Software Developer</string>
    <string name="status_pending">Status: Pending</string>
    <string name="jobs_applied_10">Jobs Applied: 10</string>
    <string name="jobs_accepted_3">Jobs Accepted: 3</string>
    <string name="jobs_rejected_7">Jobs Rejected: 7</string>
    <string name="name_anish_sharma">Name: Anish Sharma</string>

</resources>