<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!--            android:background="@drawable/circle_background" />-->

        <ImageView
            android:id="@+id/avatar.png"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_anish_sharma"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/applied_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobs_applied_10"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/accepted_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobs_accepted_3"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/rejected_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobs_rejected_7"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</ScrollView>
