<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F4ECEC"
    tools:context=".MainActivity">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/welcome"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- User Login CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="25dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/userLoginID"
                android:layout_width="164dp"
                android:layout_height="164dp"
                android:contentDescription="@string/user_login_image"
                android:src="@drawable/userlogin"/>

            <TextView
                android:id="@+id/userLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Register CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="25dp"
        app:layout_constraintTop_toBottomOf="@+id/loginCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/userRegisterID"
                android:layout_width="164dp"
                android:layout_height="164dp"
                android:contentDescription="@string/user_registered_image"
                android:src="@drawable/registerlogo"/>

            <TextView
                android:id="@+id/userRegisterTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
